--- a/tattoo.html
+++ b/tattoo.html
@@ -16,6 +16,7 @@
 
 <script src="/theme/js/jquery-1.11.2.js"></script>
 <link rel='stylesheet' href='/theme/css/main.css' type='text/css'>
+<link href="/theme/images/favicon.ico" type="image/icon" rel="icon">
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -53,52 +54,59 @@ ga('send', 'pageview');
 				</li>
 			</ul>
 		</nav>
-		<main>
+		<div class='wrapper'>
+			<main>
 <h2>Getting a Tattoo</h2>
 <p>03.14.2016</p>
-<p>I recently decided to get a tattoo for a variety of reasons, some of them
-better than others.  I decided to get one because:</p>
+<img alt="" src="/theme/images/my-tattoo.jpg" style="height: 400px;">
+<p>I recently decided to get a tattoo for a variety of reasons, some of
+them better than others.  I decided to get one because:</p>
 <ol class="arabic simple">
-<li><strong>I didn't want to be scared of permanently changing my body.</strong>  We make
-decisions that permanently alter the course of our life pretty often, in much
-bigger ways than a tattoo will, and I know I will regret coming to the end
-of my life with no permanent marks.  I have scars and birthmarks, it seemed
-it was time to make a mark that I got to dictate, that represented some
-aspect of myself.</li>
-<li><strong>It's a profoundly human experience</strong>, and in general I like to experience
-things other humans have in order to feel as though I've lived my life to
-its fullest.  There are obvious lines I don't cross (ie. heroin), but even
-the process of deciding on a design and getting it has taught me a lot.  If
-you don't believe me, try it out.</li>
-<li><strong>I wanted to think long and hard about my life up to this point, and find
-the parts that mattered the most.</strong>  Of course, there's no need to get a
-tattoo in order to do this.  However, I'm about to graduate from college and
-begin The Rest Of My Life,  and for me personally a tattoo seems as good a
-way as any to mark this turning point in my life and attempt to encapsulate
-the last 21 years into something permanent that I can carry with me going
-forward. This isn't to say that I can be boiled down into a single image or
-phrase and have that put on my body, but it is to say that there are some
-key points to represent symbolically that can help solidify my identity at
-this point.</li>
+<li><strong>I didn't want to be scared of permanently changing my body.</strong>  We
+make decisions that permanently alter the course of our life pretty
+often, in much bigger ways than a tattoo will, and I know I will
+regret coming to the end of my life with no permanent marks.  I
+have scars and birthmarks, it seemed it was time to make a mark
+that I got to dictate, that represented some aspect of myself.</li>
+<li><strong>It's a profoundly human experience</strong>, and in general I like to
+experience things other humans have in order to feel as though I've
+lived my life to its fullest.  There are obvious lines I don't
+cross (ie. heroin), but even the process of deciding on a design
+and getting it has taught me a lot.  If you don't believe me, try
+it out.</li>
+<li><strong>I wanted to think long and hard about my life up to this point,
+and find the parts that mattered the most.</strong>  Of course, there's no
+need to get a tattoo in order to do this.  However, I'm about to
+graduate from college and begin The Rest Of My Life,  and for me
+personally a tattoo seems as good a way as any to mark this turning
+point in my life and attempt to encapsulate the last 21 years into
+something permanent that I can carry with me going forward. This
+isn't to say that I can be boiled down into a single image or
+phrase and have that put on my body, but it is to say that there
+are some key points to represent symbolically that can help
+solidify my identity at this point.</li>
 <li><strong>They can be beautiful, and start conversations.</strong> Nuff said.</li>
 </ol>
-<p>So, with these intentions in mind, I set about getting a tattoo. In some ways
-it was much easier than expected, in that there is a local tattoo parlor that
-does high-quality work and is very safe. But on the whole it wasn't exactly
-easy, as permanently changing your body using needles probably shouldn't be.</p>
+<p>So, with these intentions in mind, I set about getting a tattoo. In
+some ways it was much easier than expected, in that there is a local
+tattoo parlor that does high-quality work and is very safe. But on the
+whole it wasn't exactly easy, as permanently changing your body using
+needles probably shouldn't be.</p>
 <div class="section" id="choosing-a-design">
 <h2>Choosing a Design</h2>
-<p>I wanted the tattoo to be small, simple, and something I knew I wasn't likely
-to regret.  It needed to represent some part of myself that wasn't liable to
-change, and that I wouldn't be embarrassed to talk about.  With this criteria
-in mind I had a few ideas of things that my tattoo could be &quot;about&quot;:</p>
+<p>I wanted the tattoo to be small, simple, and something I knew I wasn't
+likely to regret.  It needed to represent some part of myself that
+wasn't liable to change, and that I wouldn't be embarrassed to talk
+about.  With this criteria in mind I had a few ideas of things that my
+tattoo could be &quot;about&quot;:</p>
 <ul class="simple">
 <li>Portland, OR</li>
 <li>Something very generic + symbolic (ie. an equals sign)</li>
 </ul>
-<p>I was wary of quotes, as they seemed less pliable in their meaning, and seemed
-more likely to &quot;tire out&quot; so to speak.  Besides, if I really liked a quote, I
-had plenty of skin to get other tattoos in the future.</p>
+<p>I was wary of quotes, as they seemed less pliable in their meaning,
+and seemed more likely to &quot;tire out&quot; so to speak.  Besides, if I
+really liked a quote, I had plenty of skin to get other tattoos in the
+future.</p>
 <p>Researching designs brought up a few contenders:</p>
 <div class="figure align-left">
 <img alt="" src="/theme/images/equal-tattoo.jpg" style="width: 30%;" />
@@ -109,8 +117,8 @@ had plenty of skin to get other tattoos in the future.</p>
 <div class="figure align-center">
 <img alt="" src="/theme/images/rose-tattoo.jpg" style="width: 30%;" />
 </div>
-<p>After consulting friends and learning more about what kinds of tattoos are
-difficult to execute, and which aren't, I settled on this:</p>
+<p>After consulting friends and learning more about what kinds of tattoos
+are difficult to execute, and which aren't, I settled on this:</p>
 <div class="figure align-center">
 <img alt="" src="/theme/images/my-tattoo.jpg" />
 </div>
@@ -124,81 +132,114 @@ line art is so much easier to get, and you'll almost definitely be happier
 with the finally product. You can always work your way up to large, colored
 tats.</li>
 <li>Go with as few colors as possible.  Colors just add time, complexity,
-and money to the tattoo.  It doesn't have to be black and white, but if you
-can turn your design into black and white and still love it, it's much
-easier!</li>
+and money to the tattoo.  It doesn't have to be black and white, but
+if you can turn your design into black and white and still love it,
+it's much easier!</li>
 </ul>
 </div>
 <div class="section" id="getting-the-tattoo">
 <h2>Getting the Tattoo</h2>
-<p>Actually getting my tattoo was easy and relatively painless. I had a super
-brief consultation with the local parlor to get some questions answered and
-show them my design, then made an appointment for a few days later.  The only
-advice I received about prepping for getting the tattoo was pretty solid life
-advice: drink lots of water, eat a good healthy meal before, get enough sleep.
-Standard stuff. I got to my appointment <em>super</em> early (like, half an hour
-early) because I was so nervous, and spent the time filling out some paperwork
-and pacing.  My boyfriend came with me, which was very helpful. It was great
-not just to have support there, but someone to talk to and experience this
-with.  I said it was fine if he didn't come, but in retrospect I would not want
-to get a tattoo alone. So, around 7 the tattoo artist set up the table, showed
-me her rendering of the design, and then did this cool paper-to-skin thing so
-you could basically see how the tattoo was going to look before getting inked.
-It looked great, so we got started!</p>
-<p>My tattoo is on my ribs, which regular tattoo-getters will tell you is among
-the more painful spots since it's so close to bone.  It definitely wasn't
-comfortable, but my tattoo was so small and simple that it wasn't painful so
-much as annoying. It feels like someone is rubbing the tip of a needle on your
-skin, not like it's <em>cutting</em> you, but just lightly scratch.  If you have a
-really sharp pencil, you can try drawing on your skin, and that's about how it
-feels.  My tattoo took about 10 minutes from start to finish, and with my beau
-to keep me distracted it went by pretty quick.  My tattoo artist was also
-incredibly sweet, understanding, and supportive, and made the whole experience
-that much more pleasant. Once it was done, I took a look to make sure it all
-looked good.  I won't get too cheesy, but it was love at first site. As anyone
-is with their first tattoo, I was nervous that I would regret getting something
-put permanently on my body, but I knew when I saw it that I had made the right
-decision. Crisis: avoided.</p>
+<p>Actually getting my tattoo was easy and relatively painless. I had a
+super brief consultation with the local parlor to get some questions
+answered and show them my design, then made an appointment for a few
+days later.  The only advice I received about prepping for getting the
+tattoo was pretty solid life advice: drink lots of water, eat a good
+healthy meal before, get enough sleep.  Standard stuff. I got to my
+appointment <em>super</em> early (like, half an hour early) because I was so
+nervous, and spent the time filling out some paperwork and pacing.  My
+boyfriend came with me, which was very helpful. It was great not just
+to have support there, but someone to talk to and experience this
+with.  I said it was fine if he didn't come, but in retrospect I would
+not want to get a tattoo alone. So, around 7 the tattoo artist set up
+the table, showed me her rendering of the design, and then did this
+cool paper-to-skin thing so you could basically see how the tattoo was
+going to look before getting inked.  It looked great, so we got
+started!</p>
+<p>My tattoo is on my ribs, which regular tattoo-getters will tell you is
+among the more painful spots since it's so close to bone.  It
+definitely wasn't comfortable, but my tattoo was so small and simple
+that it wasn't painful so much as annoying. It feels like someone is
+rubbing the tip of a needle on your skin, not like it's <em>cutting</em> you,
+but just lightly scratch.  If you have a really sharp pencil, you can
+try drawing on your skin, and that's about how it feels.  My tattoo
+took about 10 minutes from start to finish, and with my beau to keep
+me distracted it went by pretty quick.  My tattoo artist was also
+incredibly sweet, understanding, and supportive, and made the whole
+experience that much more pleasant. Once it was done, I took a look to
+make sure it all looked good.  I won't get too cheesy, but it was love
+at first site. As anyone is with their first tattoo, I was nervous
+that I would regret getting something put permanently on my body, but
+I knew when I saw it that I had made the right decision. Crisis:
+avoided.</p>
 <div class="figure align-center">
 <img alt="" src="/theme/images/my-tat-picture.jpeg" style="width: 40%;" />
 </div>
 </div>
 <div class="section" id="post-tattoo">
 <h2>Post-tattoo</h2>
-<p>Super cool tattoo lady hooked me up with some tattoo-care products for totally
-reasonable and worth-it prices, including a nice soap and lotion.  Since my
-tattoo was so small and minimal it never hurt, turned red, itched, or any of
-the other possible skin irritation that often come after getting a tattoo.  I
-even forgot I had one the next day, and as I was getting ready for bed thought
-&quot;OH MY GOD WHAT HAPPENED oh right I got a tattoo&quot;.  The lesson: start small!
-It's been 100% painless as long as you take good care of it.  It's been exactly
-1 week since I got it as of this writing, and by now it feels like a completely
-normal and natural part of my body.</p>
+<p>Super cool tattoo lady hooked me up with some tattoo-care products for
+totally reasonable and worth-it prices, including a nice soap and
+lotion.  Since my tattoo was so small and minimal it never hurt,
+turned red, itched, or any of the other possible skin irritation that
+often come after getting a tattoo.  I even forgot I had one the next
+day, and as I was getting ready for bed thought &quot;OH MY GOD WHAT
+HAPPENED oh right I got a tattoo&quot;.  The lesson: start small!  It's
+been 100% painless as long as you take good care of it.  It's been
+exactly 1 week since I got it as of this writing, and by now it feels
+like a completely normal and natural part of my body.</p>
 </div>
 <div class="section" id="conclusion">
 <h2>Conclusion</h2>
-<p>Overall I'm very happy with my tattoo, and the decision to get it. There are
-totally unexpected side effects of empowerment, and my tattoo is not just a
-reminder of where I come from but that my body is <em>mine</em>, and that I get to
-choose what happens to it. I have to admit that my parents explicitly didn't
-approve of my getting one, and I was really hurt that they wouldn't support me.
-I understand that as parents their job is to keep me safe and avoid regrettable
-decisions, which a tattoo very well could be. But (as is hopefully evidenced by
-this post!) I put a lot of thought and care into getting one, and wish that
-they had been more understanding.  Luckily, it's not very visible, so no one
-<em>has</em> to know.  Even if they do find out (probably through this post), it's my
-body! Yay!</p>
-<p>I'm thrilled that I can carry a piece of my childhood with me into adulthood
-now, and know what it's like to be tattooed.  It's almost like being part of a
-club, and has already sparked some very interesting and intimate conversations
-with co-workers and friends about their tattoos, and how they decided to get
-them.  I'm not sure what the best way to end this post is, but I hope it's
-been helpful | insightful | interesting! Have an excellent day :)</p>
+<p>Overall I'm very happy with my tattoo, and the decision to get it.
+There are totally unexpected side effects of empowerment, and my
+tattoo is not just a reminder of where I come from but that my body is
+<em>mine</em>, and that I get to choose what happens to it. I have to admit
+that my parents explicitly didn't approve of my getting one, and I was
+really hurt that they wouldn't support me.  I understand that as
+parents their job is to keep me safe and avoid regrettable decisions,
+which a tattoo very well could be. But (as is hopefully evidenced by
+this post!) I put a lot of thought and care into getting one, and wish
+that they had been more understanding.  Luckily, it's not very
+visible, so no one <em>has</em> to know.  Even if they do find out (probably
+through this post), it's my body! Yay!</p>
+<p>I'm thrilled that I can carry a piece of my childhood with me into
+adulthood now, and know what it's like to be tattooed.  It's almost
+like being part of a club, and has already sparked some very
+interesting and intimate conversations with co-workers and friends
+about their tattoos, and how they decided to get them.  I'm not sure
+what the best way to end this post is, but I hope it's been helpful |
+insightful | interesting! Have an excellent day :)</p>
 </div>
 
 
-		</main>
+			</main>
+			<aside>
+				<div class='sidebar'>
+					<div class='social-media'>
+						<a href='https://github.com/lucywyman'>
+							<img class='social' src='theme/images/github-icon.png'>
+						</a>
+						<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'>
+							<img class='social' src='theme/images/linkedin.png'>
+						</a>
+						<a href='https://plus.google.com/107251431728646146032/posts'>
+							<img class='social' src='theme/images/google-plus.png'>
+						</a>
+					</div>
+					<!--TODO: search, subscribe, about me, popular article,
+				 archive-->
+					<div class='subscribe'>
+						<h3>Subscribe</h3>
+						<form method="post" action='/subscribe.php'>
+							<input type="email" name="EMAIL" placeholder="Your email address" required />
+							<input type="submit" value="Sign up" />
+						</form>
+					</div>
+				</div>
+			</aside>
+		</div>
 		<div class='footer'>
+			<!-- TODO -->
 			<a href='https://github.com/lucywyman'>
 				<img class='social' src='theme/images/github-icon.png'>
 			</a>
