--- a/everybody-rise.html
+++ b/everybody-rise.html
@@ -16,6 +16,7 @@
 
 <script src="/theme/js/jquery-1.11.2.js"></script>
 <link rel='stylesheet' href='/theme/css/main.css' type='text/css'>
+<link href="/theme/images/favicon.ico" type="image/icon" rel="icon">
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -53,23 +54,48 @@ ga('send', 'pageview');
 				</li>
 			</ul>
 		</nav>
-		<main>
+		<div class='wrapper'>
+			<main>
 <h2>Book Review: Everybody Rise</h2>
 <p>05.30.2016</p>
-<div class="figure align-center">
-<img alt="" src="/theme/images/everybody-rise.jpg" style="height: 400px;" />
-</div>
-<p>This is a total candy read for me.  The book follows a middle class woman,
-Evelyn, trying to break into the hyper-rich socialite society she grew up on
-the fringes of.  Her life spirals completely out of control, and it's all about
-how she deals with it. This book was totally about expectations, and it 100%
-met my expectations of a fun summer read.  It was definitely entertaining,
-interesting characters, and a very satisfying ending. If you like girly
-fun reads like me, this is definitely worth putting on your summer list!</p>
+<p>This is a total candy read for me.  The book follows a middle class
+woman, Evelyn, trying to break into the hyper-rich socialite society
+she grew up on the fringes of.  Her life spirals completely out of
+control, and it's all about how she deals with it. This book was
+totally about expectations, and it 100% met my expectations of a fun
+summer read.  It was definitely entertaining, interesting characters,
+and a very satisfying ending. If you like girly fun reads like me,
+this is definitely worth putting on your summer list!</p>
 
 
-		</main>
+			</main>
+			<aside>
+				<div class='sidebar'>
+					<div class='social-media'>
+						<a href='https://github.com/lucywyman'>
+							<img class='social' src='theme/images/github-icon.png'>
+						</a>
+						<a href='http://linkedin.com/pub/lucy-wyman/70/553/6a7/'>
+							<img class='social' src='theme/images/linkedin.png'>
+						</a>
+						<a href='https://plus.google.com/107251431728646146032/posts'>
+							<img class='social' src='theme/images/google-plus.png'>
+						</a>
+					</div>
+					<!--TODO: search, subscribe, about me, popular article,
+				 archive-->
+					<div class='subscribe'>
+						<h3>Subscribe</h3>
+						<form method="post" action='/subscribe.php'>
+							<input type="email" name="EMAIL" placeholder="Your email address" required />
+							<input type="submit" value="Sign up" />
+						</form>
+					</div>
+				</div>
+			</aside>
+		</div>
 		<div class='footer'>
+			<!-- TODO -->
 			<a href='https://github.com/lucywyman'>
 				<img class='social' src='theme/images/github-icon.png'>
 			</a>
