Add openstack post

--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>09.6.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/openstack-image-default-username-reference.html">Openstack Image Default Username Reference</a></dd>
     <dt>09.1.2016</dt>
     <dd><a href="http://blog.lucywyman.me/bumbershoot-packing.html">Packing For Bumbershoot</a></dd>
     <dt>08.23.2016</dt>
