--- a/happy-and-healthy.html
+++ b/happy-and-healthy.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Healthy + Happy: Inspired by My Mom</h2>
 <p>03.6.2016</p>
 <p>In honor of International Women's Day, or National Nutrition Month, or
@@ -79,7 +80,7 @@ doesn't indicate how healthy you are, that big hispanic booties
 are a great ass-et, and that exercising and eating to feel good
 will make me way happeir (and healthier) than dieting ever will.</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
