--- a/how-not-to-be-wrong.html
+++ b/how-not-to-be-wrong.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: How Not To Be Wrong</h2>
 <p>04.17.2016</p>
 <img alt="" src="/theme/images/how-not-to-be.jpg" style="height: 400px;">
@@ -89,7 +90,7 @@ of mathematically flavored advice&quot;</li>
 </ul>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
