--- a/interviews.html
+++ b/interviews.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>The Interview</h2>
 <p>03.20.2016</p>
 <p>Interviewing is a lot like dating.  You put on your nice clothes. You're
@@ -451,7 +452,7 @@ that's stoked to bring you on board!</li>
 wyman[dot]lucy[at]gmail[dot]com if you have questions or comments.</p>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
