--- a/me-before-you.html
+++ b/me-before-you.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Me Before You</h2>
 <p>06.1.2016</p>
 <img alt="" src="/theme/images/me-before.jpg" style="height: 400px;">
@@ -82,7 +83,7 @@ appreciation and gratitude for my body.  It sounds heavy now, but this
 book is <em>juicy</em> as well. 100% page turner.  Definitely worth putting
 on your summer list!</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
