--- a/me-earl-dying-girl.html
+++ b/me-earl-dying-girl.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Me and Earl and the Dying Girl</h2>
 <p>05.9.2016</p>
 <img alt="" src="/theme/images/me-earl.jpeg" style="height: 400px;">
@@ -76,7 +77,7 @@ a few more heady books I'm in the middle of, and is a great weekend read
 if you're looking for something more seroius than a romance novel but less
 serious than LOTR.</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
