--- a/podcasts.html
+++ b/podcasts.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Podcasts I Love</h2>
 <p>04.21.2016</p>
 <p>The goal of this post is not to enumerate the top 10 podcasts that you already
@@ -131,7 +132,7 @@ I didn't like any of them I just wouldn't listen to them.</p>
 </ul>
 <p>If you have any other recommendations for this list, please let me know!</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
