--- a/ptown-may-2016.html
+++ b/ptown-may-2016.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Portland Trip: May 2016</h2>
 <p>05.3.2016</p>
 <p>This last weekend Eli and I went to Portland to celebrate his 21st
@@ -156,7 +157,7 @@ The Cultural Bubble that is University, remember that life isn't all deadlines
 and exams, and experience a little art and outdoors.  10/10 would recommend.</p>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
