--- a/scale-14x.html
+++ b/scale-14x.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>SCaLE 14x: My Experience</h2>
 <p>01.23.2016</p>
 <div class="figure align-center">
@@ -180,7 +181,7 @@ better later. For now, ciao gentle reader. You excellent human you.</p>
 </div>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
