--- a/2016-summer-books.html
+++ b/2016-summer-books.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>11(+) Books to Read This Summer</h2>
 <p>05.17.2016</p>
 <p>Hello beautiful reader! Summer is upon us, and with long sunny days ahead
@@ -103,7 +104,7 @@ personal story and charismatic voice make this feel good, palate-cleanser
 sort of book. Remind yourself there's good in the world.</li>
 </ul>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
