--- a/boy.html
+++ b/boy.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>If I Were A Boy</h2>
 <p>04.11.2016</p>
 <p>Before coming to college I was completely unaware of the diversity problem in
@@ -159,7 +160,7 @@ I apologize for this, but the point remains the same: the class was
 </ul>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
