--- a/brooklyn.html
+++ b/brooklyn.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Brooklyn</h2>
 <p>04.17.2016</p>
 <div class="figure align-center">
@@ -94,7 +95,7 @@ is generally glossed over. Overall I was underwhelmed,
 and wouldn't recommend it if you've got other books
 on your list to read.</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
