--- a/bumbershoot-packing.html
+++ b/bumbershoot-packing.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Packing For Bumbershoot</h2>
 <p>09.1.2016</p>
 <p>Labor Day is upon us, friends, and like most I'm taking flight to get in
@@ -83,7 +84,7 @@ So, with four full days ahead of us, here's what I packed:</p>
 </ul>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
