--- a/everybody-rise.html
+++ b/everybody-rise.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Everybody Rise</h2>
 <p>05.30.2016</p>
 <p>This is a total candy read for me.  The book follows a middle class
@@ -67,7 +68,7 @@ summer read.  It was definitely entertaining, interesting characters,
 and a very satisfying ending. If you like girly fun reads like me,
 this is definitely worth putting on your summer list!</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
