--- a/furiously-happy.html
+++ b/furiously-happy.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Furiously Happy</h2>
 <p>04.3.2016</p>
 <img alt="" src="/theme/images/furiously-happy.jpg" style="height: 400px;">
@@ -85,7 +86,7 @@ recommend the audio-book version as well. It's narrated by the author,
 has several &quot;extra&quot; little bits in it, and Lawson's narration
 definitely adds a lot to the experience of consuming the book.</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
