--- a/harry-potter-series.html
+++ b/harry-potter-series.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Harry Potter Series</h2>
 <p>03.19.2016</p>
 <img alt="" src="/theme/images/harry-potter.jpg" style="height: 400px;">
@@ -146,7 +147,7 @@ together. In the meantime, have an excellent day, you lovely human
 you.</p>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
