--- a/hunger-makes-me-a-modern-girl.html
+++ b/hunger-makes-me-a-modern-girl.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: Hunger Makes Me A Modern Girl</h2>
 <p>03.1.2016</p>
 <img alt="" src="/theme/images/hunger-makes-me.jpg" style="height: 400px;">
@@ -98,7 +99,7 @@ to navigate it.</p>
 and worthwhile read. Entertaining, insightful, and almost unbearably
 honest, I would highly recommend picking this up if you have a chance.</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
