--- a/loves.html
+++ b/loves.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Loves</h2>
 <p>03.5.2016</p>
 <p>Hello, gentle reader. This is a living list of media that has significantly
@@ -78,7 +79,7 @@ home makeovers that will inspire you to learn more about home improvement!
 It's a little tough to watch while renting a basement.</li>
 </ul>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
