--- a/tattoo.html
+++ b/tattoo.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Getting a Tattoo</h2>
 <p>03.14.2016</p>
 <img alt="" src="/theme/images/my-tattoo.jpg" style="height: 400px;">
@@ -211,7 +212,7 @@ what the best way to end this post is, but I hope it's been helpful |
 insightful | interesting! Have an excellent day :)</p>
 </div>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
