--- a/when-breath-becomes-air.html
+++ b/when-breath-becomes-air.html
@@ -56,6 +56,7 @@ ga('send', 'pageview');
 		</nav>
 		<div class='wrapper'>
 			<main>
+<div class='article'>
 <h2>Book Review: When Breath Becomes Air</h2>
 <p>05.21.2016</p>
 <img alt="" src="/theme/images/when-breath.jpg" style="height: 400px;">
@@ -70,7 +71,7 @@ as well as delivery are beautiful, and I found myself crying
 on the way to class listening to the very end. A short and
 worthwhile read for any audience.</p>
 
-
+</div>
 			</main>
 			<aside>
 				<div class='sidebar'>
