--- a/archives.html
+++ b/archives.html
@@ -84,6 +84,8 @@ ga('send', 'pageview');
     <dt>04.21.2016</dt>
     <dd><a href="http://blog.lucywyman.me/podcasts.html">Podcasts I Love</a></dd>
     <dt>04.17.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/beaver-barcamp-16.html">Beaver Barcamp 16</a></dd>
+    <dt>04.17.2016</dt>
     <dd><a href="http://blog.lucywyman.me/brooklyn.html">Book Review: Brooklyn</a></dd>
     <dt>04.17.2016</dt>
     <dd><a href="http://blog.lucywyman.me/how-not-to-be-wrong.html">Book Review: How Not To Be Wrong</a></dd>
@@ -126,14 +128,7 @@ ga('send', 'pageview');
 					</div>
 					<!--TODO: search, subscribe, about me, popular article,
 				 archive-->
-					<div class='subscribe'>
-						<h3>Subscribe</h3>
-						<form method="post" action='/subscribe.php'>
-							<input type="email" name="EMAIL" placeholder="Your email address" required />
-							<input type="submit" value="Sign up" />
-						</form>
-					</div>
-				</div>
+                </div>
 			</aside>
 		</div>
 		<div class='footer'>
