--- a/categories.html
+++ b/categories.html
@@ -58,6 +58,7 @@ ga('send', 'pageview');
 			<main>
 <ul>
     <li><a href="http://blog.lucywyman.me/category/books.html">Books</a></li>
+    <li><a href="http://blog.lucywyman.me/category/conferences.html">Conferences</a></li>
     <li><a href="http://blog.lucywyman.me/category/experiences.html">Experiences</a></li>
     <li><a href="http://blog.lucywyman.me/category/fashion.html">Fashion</a></li>
     <li><a href="http://blog.lucywyman.me/category/loves.html">Loves</a></li>
@@ -79,14 +80,7 @@ ga('send', 'pageview');
 					</div>
 					<!--TODO: search, subscribe, about me, popular article,
 				 archive-->
-					<div class='subscribe'>
-						<h3>Subscribe</h3>
-						<form method="post" action='/subscribe.php'>
-							<input type="email" name="EMAIL" placeholder="Your email address" required />
-							<input type="submit" value="Sign up" />
-						</form>
-					</div>
-				</div>
+                </div>
 			</aside>
 		</div>
 		<div class='footer'>
