--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>09.15.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/belt.html">The Only Belt I Own</a></dd>
     <dt>09.10.2016</dt>
     <dd><a href="http://blog.lucywyman.me/fall-haul-2016.html">Pre-Fall Haul 2016</a></dd>
     <dt>09.6.2016</dt>
