--- a/boy.html
+++ b/boy.html
@@ -150,7 +150,7 @@ being pushed even further out of a conversation I was already not a part of,
 and like that <em>was</em> what he was implying.  I left shortly after, holding back
 tears, and was told that I should have just said &quot;Fuck you&quot; to the guy and
 carried on.  I shouldn't have let it ruin the evening, and should have asserted
-that it wasn't and OK thing to say.  But why is that burden on me?  Why didn't
+that it wasn't an OK thing to say.  But why is that burden on me?  Why didn't
 my friends defend me, or even notice that I was visibly upset at the comment?
 Why didn't anyone else think it wasn't OK?</p>
 <p>Now that I'm working in the real world, I realize what being treated equally is
