--- a/archives.html
+++ b/archives.html
@@ -41,10 +41,6 @@ ga('send', 'pageview');
 						Tech</a>
 				</li>
 				<li>
-					<a href='http://blog.lucywyman.me/category/fashion.html'>
-						Fashion</a>
-				</li>
-				<li>
 					<a href='http://blog.lucywyman.me/category/experiences.html'>
 						Experiences</a>
 				</li>
@@ -59,18 +55,12 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>09.27.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/tgwtlbt.html">Book Review: The Girl with the Lower Back Tattoo</a></dd>
     <dt>09.25.2016</dt>
     <dd><a href="http://blog.lucywyman.me/boy.html">If I Were A Boy</a></dd>
-    <dt>09.15.2016</dt>
-    <dd><a href="http://blog.lucywyman.me/belt.html">The Only Belt I Own</a></dd>
-    <dt>09.10.2016</dt>
-    <dd><a href="http://blog.lucywyman.me/fall-haul-2016.html">Pre-Fall Haul 2016</a></dd>
     <dt>09.6.2016</dt>
     <dd><a href="http://blog.lucywyman.me/openstack-image-default-username-reference.html">Openstack Image Default Username Reference</a></dd>
-    <dt>09.1.2016</dt>
-    <dd><a href="http://blog.lucywyman.me/bumbershoot-packing.html">Packing For Bumbershoot</a></dd>
-    <dt>08.23.2016</dt>
-    <dd><a href="http://blog.lucywyman.me/jeans.html">A Pear of Jeans</a></dd>
     <dt>06.1.2016</dt>
     <dd><a href="http://blog.lucywyman.me/me-before-you.html">Book Review: Me Before You</a></dd>
     <dt>05.30.2016</dt>
