--- a/brooklyn.html
+++ b/brooklyn.html
@@ -41,10 +41,6 @@ ga('send', 'pageview');
 						Tech</a>
 				</li>
 				<li>
-					<a href='http://blog.lucywyman.me/category/fashion.html'>
-						Fashion</a>
-				</li>
-				<li>
 					<a href='http://blog.lucywyman.me/category/experiences.html'>
 						Experiences</a>
 				</li>
@@ -59,9 +55,7 @@ ga('send', 'pageview');
 <div class='article'>
 <h2>Book Review: Brooklyn</h2>
 <p>04.17.2016</p>
-<div class="figure align-center">
-<img alt="" src="/theme/images/brooklyn-cover.jpg" style="height: 400px;" />
-</div>
+<img alt="" src="/theme/images/brooklyn-cover.jpg" style="height: 400px;">
 <p>All I knew when I picked this book up was that
 it was made into a movie, and had something to do with a
 young woman, the early 20th century, and probably
