--- a/archives.html
+++ b/archives.html
@@ -55,6 +55,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>10.4.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/sex-object.html">Book Review: Sex Object</a></dd>
     <dt>09.27.2016</dt>
     <dd><a href="http://blog.lucywyman.me/tgwtlbt.html">Book Review: The Girl with the Lower Back Tattoo</a></dd>
     <dt>09.25.2016</dt>
