Add art of racing in the rain

--- a/archives.html
+++ b/archives.html
@@ -55,12 +55,16 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>10.16.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/the-art-of-racing-in-the-rain.html">Book Review: The Art of Racing in the Rain</a></dd>
+    <dt>10.13.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/programmatic-class-creation.html">Minimal Programmatic Puppet Class Creation</a></dd>
     <dt>10.7.2016</dt>
     <dd><a href="http://blog.lucywyman.me/2016-fall-reading-list.html">6 Books to Read This Fall</a></dd>
     <dt>10.4.2016</dt>
     <dd><a href="http://blog.lucywyman.me/sex-object.html">Book Review: Sex Object</a></dd>
     <dt>09.27.2016</dt>
-    <dd><a href="http://blog.lucywyman.me/tgwtlbt.html">Book Review: The Girl with the Lower Back Tattoo</a></dd>
+    <dd><a href="http://blog.lucywyman.me/the-girl-with-the-lower-back-tattoo.html">Book Review: The Girl with the Lower Back Tattoo</a></dd>
     <dt>09.25.2016</dt>
     <dd><a href="http://blog.lucywyman.me/boy.html">If I Were A Boy</a></dd>
     <dt>09.6.2016</dt>
