--- a/archives.html
+++ b/archives.html
@@ -7,22 +7,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="A humble blog by me, Lucy Wyman">
 <meta name="keywords" content="blog, code, lucy, wyman">
-<meta name="keywords" content="(<Tag u'orchestrator'>, [<pelican.contents.Article object at 0x7f743d58ad50>])">
-<meta name="keywords" content="(<Tag u'conferences'>, [<pelican.contents.Article object at 0x7f743d608490>, <pelican.contents.Article object at 0x7f743d71c810>, <pelican.contents.Article object at 0x7f743d738ed0>])">
-<meta name="keywords" content="(<Tag u'travel'>, [<pelican.contents.Article object at 0x7f743d6b7750>])">
-<meta name="keywords" content="(<Tag u'interviews'>, [<pelican.contents.Article object at 0x7f743d879b10>])">
-<meta name="keywords" content="(<Tag u'concerts'>, [<pelican.contents.Article object at 0x7f743d6b7750>])">
-<meta name="keywords" content="(<Tag u'book-review'>, [<pelican.contents.Article object at 0x7f743d628e90>, <pelican.contents.Article object at 0x7f743d8b0b90>, <pelican.contents.Article object at 0x7f743d5f8890>, <pelican.contents.Article object at 0x7f743d5f8610>, <pelican.contents.Article object at 0x7f743d5f8e90>, <pelican.contents.Article object at 0x7f743d67b190>, <pelican.contents.Article object at 0x7f743d628690>, <pelican.contents.Article object at 0x7f743d5bec50>, <pelican.contents.Article object at 0x7f743d7063d0>, <pelican.contents.Article object at 0x7f743d706710>, <pelican.contents.Article object at 0x7f743d8b0cd0>, <pelican.contents.Article object at 0x7f743d879c90>, <pelican.contents.Article object at 0x7f743d58acd0>, <pelican.contents.Article object at 0x7f743d5f8a10>])">
-<meta name="keywords" content="(<Tag u'application'>, [<pelican.contents.Article object at 0x7f743d58ad50>])">
-<meta name="keywords" content="(<Tag u'flag'>, [<pelican.contents.Article object at 0x7f743d58ad50>])">
-<meta name="keywords" content="(<Tag u'books'>, [<pelican.contents.Article object at 0x7f743d6282d0>, <pelican.contents.Article object at 0x7f743d77ec90>])">
-<meta name="keywords" content="(<Tag u'puppet'>, [<pelican.contents.Article object at 0x7f743d58ad50>, <pelican.contents.Article object at 0x7f743d6b71d0>])">
-<meta name="keywords" content="(<Tag u'loves'>, [<pelican.contents.Article object at 0x7f743d6282d0>, <pelican.contents.Article object at 0x7f743d77ec90>, <pelican.contents.Article object at 0x7f743d706d50>, <pelican.contents.Article object at 0x7f743d706f50>, <pelican.contents.Article object at 0x7f743d771e90>, <pelican.contents.Article object at 0x7f743d8c2e90>])">
-<meta name="keywords" content="(<Tag u'openstack'>, [<pelican.contents.Article object at 0x7f743d58ad10>])">
-<meta name="keywords" content="(<Tag u'tech'>, [<pelican.contents.Article object at 0x7f743d58ad50>, <pelican.contents.Article object at 0x7f743d6b71d0>, <pelican.contents.Article object at 0x7f743d6b7090>, <pelican.contents.Article object at 0x7f743d58ad10>, <pelican.contents.Article object at 0x7f743d706d50>, <pelican.contents.Article object at 0x7f743d71c810>, <pelican.contents.Article object at 0x7f743d879b10>, <pelican.contents.Article object at 0x7f743d706f50>, <pelican.contents.Article object at 0x7f743d5f8a10>, <pelican.contents.Article object at 0x7f743d738ed0>])">
-<meta name="keywords" content="(<Tag u'experiences'>, [<pelican.contents.Article object at 0x7f743d6b7090>, <pelican.contents.Article object at 0x7f743d608490>, <pelican.contents.Article object at 0x7f743d6b7750>, <pelican.contents.Article object at 0x7f743d71c810>, <pelican.contents.Article object at 0x7f743d879b10>, <pelican.contents.Article object at 0x7f743d608fd0>])">
-<meta name="keywords" content="(<Tag u'example'>, [<pelican.contents.Article object at 0x7f743d58ad50>])">
-<meta name="keywords" content="(<Tag u'women'>, [<pelican.contents.Article object at 0x7f743d5f8610>, <pelican.contents.Article object at 0x7f743d771e90>, <pelican.contents.Article object at 0x7f743d58acd0>])">
+<meta name="keywords" content="(<Tag u'orchestrator'>, [<pelican.contents.Article object at 0x7fd730b22d50>])">
+<meta name="keywords" content="(<Tag u'conferences'>, [<pelican.contents.Article object at 0x7fd730d8c650>, <pelican.contents.Article object at 0x7fd730cb4810>, <pelican.contents.Article object at 0x7fd730cd0ed0>])">
+<meta name="keywords" content="(<Tag u'travel'>, [<pelican.contents.Article object at 0x7fd730c4f750>])">
+<meta name="keywords" content="(<Tag u'interviews'>, [<pelican.contents.Article object at 0x7fd730e11b10>])">
+<meta name="keywords" content="(<Tag u'concerts'>, [<pelican.contents.Article object at 0x7fd730c4f750>])">
+<meta name="keywords" content="(<Tag u'book-review'>, [<pelican.contents.Article object at 0x7fd730bc0e90>, <pelican.contents.Article object at 0x7fd730e48b90>, <pelican.contents.Article object at 0x7fd730b90890>, <pelican.contents.Article object at 0x7fd730b90610>, <pelican.contents.Article object at 0x7fd730b90e90>, <pelican.contents.Article object at 0x7fd730c13190>, <pelican.contents.Article object at 0x7fd730bc0690>, <pelican.contents.Article object at 0x7fd730b56c50>, <pelican.contents.Article object at 0x7fd730c9e3d0>, <pelican.contents.Article object at 0x7fd730c9e710>, <pelican.contents.Article object at 0x7fd730e48cd0>, <pelican.contents.Article object at 0x7fd730e11c90>, <pelican.contents.Article object at 0x7fd730b22cd0>, <pelican.contents.Article object at 0x7fd730b90a10>])">
+<meta name="keywords" content="(<Tag u'application'>, [<pelican.contents.Article object at 0x7fd730b22d50>])">
+<meta name="keywords" content="(<Tag u'flag'>, [<pelican.contents.Article object at 0x7fd730b22d50>])">
+<meta name="keywords" content="(<Tag u'books'>, [<pelican.contents.Article object at 0x7fd730bc02d0>, <pelican.contents.Article object at 0x7fd730d16c90>])">
+<meta name="keywords" content="(<Tag u'puppet'>, [<pelican.contents.Article object at 0x7fd730b22d50>, <pelican.contents.Article object at 0x7fd730c4f1d0>])">
+<meta name="keywords" content="(<Tag u'loves'>, [<pelican.contents.Article object at 0x7fd730bc02d0>, <pelican.contents.Article object at 0x7fd730d16c90>, <pelican.contents.Article object at 0x7fd730c9ed50>, <pelican.contents.Article object at 0x7fd730c9ef50>, <pelican.contents.Article object at 0x7fd730ba0750>, <pelican.contents.Article object at 0x7fd730e5ae90>])">
+<meta name="keywords" content="(<Tag u'openstack'>, [<pelican.contents.Article object at 0x7fd730b22d10>])">
+<meta name="keywords" content="(<Tag u'tech'>, [<pelican.contents.Article object at 0x7fd730b22d50>, <pelican.contents.Article object at 0x7fd730d09c50>, <pelican.contents.Article object at 0x7fd730c4f1d0>, <pelican.contents.Article object at 0x7fd730c4f090>, <pelican.contents.Article object at 0x7fd730b22d10>, <pelican.contents.Article object at 0x7fd730c9ed50>, <pelican.contents.Article object at 0x7fd730cb4810>, <pelican.contents.Article object at 0x7fd730e11b10>, <pelican.contents.Article object at 0x7fd730c9ef50>, <pelican.contents.Article object at 0x7fd730b90a10>, <pelican.contents.Article object at 0x7fd730cd0ed0>])">
+<meta name="keywords" content="(<Tag u'experiences'>, [<pelican.contents.Article object at 0x7fd730d09c50>, <pelican.contents.Article object at 0x7fd730c4f090>, <pelican.contents.Article object at 0x7fd730d8c650>, <pelican.contents.Article object at 0x7fd730c4f750>, <pelican.contents.Article object at 0x7fd730cb4810>, <pelican.contents.Article object at 0x7fd730e11b10>, <pelican.contents.Article object at 0x7fd730d8cad0>])">
+<meta name="keywords" content="(<Tag u'example'>, [<pelican.contents.Article object at 0x7fd730b22d50>])">
+<meta name="keywords" content="(<Tag u'women'>, [<pelican.contents.Article object at 0x7fd730d09c50>, <pelican.contents.Article object at 0x7fd730b90610>, <pelican.contents.Article object at 0x7fd730ba0750>, <pelican.contents.Article object at 0x7fd730b22cd0>])">
 <meta name="robots" content="index, follow">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
@@ -75,6 +75,8 @@ ga('send', 'pageview');
     <dd><a href="http://blog.lucywyman.me/puppet-orchestrator-application-flag.html">Puppet Orchestrator --application Example</a></dd>
     <dt>10.20.2016</dt>
     <dd><a href="http://blog.lucywyman.me/the-girls.html">Book Review: The Girls</a></dd>
+    <dt>10.17.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/respect.html">Rivers of Milk and Honey</a></dd>
     <dt>10.16.2016</dt>
     <dd><a href="http://blog.lucywyman.me/the-art-of-racing-in-the-rain.html">Book Review: The Art of Racing in the Rain</a></dd>
     <dt>10.13.2016</dt>
