Add christmas book list

--- a/archives.html
+++ b/archives.html
@@ -76,8 +76,12 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>11.4.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/2016-book-gifting-guide.html">Book Lovers: A Gifting Guide</a></dd>
     <dt>11.2.2016</dt>
     <dd><a href="http://blog.lucywyman.me/respect.html">Rivers of Milk and Honey</a></dd>
+    <dt>11.1.2016</dt>
+    <dd><a href="http://blog.lucywyman.me/im-thinking-of-ending-things.html">Book Review: I'm Thinking of Ending Things</a></dd>
     <dt>10.26.2016</dt>
     <dd><a href="http://blog.lucywyman.me/puppet-orchestrator-application-flag.html">Puppet Orchestrator --application Example</a></dd>
     <dt>10.20.2016</dt>
