--- a/archives.html
+++ b/archives.html
@@ -87,6 +87,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>05.29.2017</dt>
+    <dd><a href="http://blog.lucywyman.me/summer-bucket-list-2017.html">Summer Bucket List 2017</a></dd>
     <dt>05.15.2017</dt>
     <dd><a href="http://blog.lucywyman.me/oscon-2017.html">OSCON 2017</a></dd>
     <dt>05.3.2017</dt>
