Update if I were a boy

--- a/archives.html
+++ b/archives.html
@@ -19,7 +19,7 @@
 <meta name="keywords" content="book-review">
 <meta name="keywords" content="application">
 <meta name="keywords" content="health">
-<meta name="keywords" content="openshift">
+<meta name="keywords" content="Openshift">
 <meta name="keywords" content="orchestrator">
 <meta name="keywords" content="flag">
 <meta name="keywords" content="experiences">
@@ -88,6 +88,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>07.25.2017</dt>
+    <dd><a href="http://blog.lucywyman.me/installing-a-package-in-an-openshift-container.html">Installing a Package in an Openshift Container (Kind Of)</a></dd>
     <dt>06.15.2017</dt>
     <dd><a href="http://blog.lucywyman.me/deploy-private-git-repo-to-openshift.html">How to Deploy a Private Git Repo to Openshift</a></dd>
     <dt>05.30.2017</dt>
@@ -291,7 +293,7 @@ ga('send', 'pageview');
             </li>
 
             <li> 
-              <a href='http://blog.lucywyman.me/tag/openshift.html'>openshift</a>
+              <a href='http://blog.lucywyman.me/tag/Openshift.html'>Openshift</a>
             </li>
 
             <li> 
