--- a/authors.html
+++ b/authors.html
@@ -19,7 +19,7 @@
 <meta name="keywords" content="book-review">
 <meta name="keywords" content="application">
 <meta name="keywords" content="health">
-<meta name="keywords" content="openshift">
+<meta name="keywords" content="Openshift">
 <meta name="keywords" content="orchestrator">
 <meta name="keywords" content="flag">
 <meta name="keywords" content="experiences">
@@ -87,7 +87,7 @@ ga('send', 'pageview');
       <main>
     <h1>Authors on blog</h1>
 
-    <ul>        <li><a href="http://blog.lucywyman.me/author/lucy-wyman.html">Lucy Wyman</a> (58)</li>
+    <ul>        <li><a href="http://blog.lucywyman.me/author/lucy-wyman.html">Lucy Wyman</a> (59)</li>
     </ul>
       </main>
       <aside>
@@ -175,7 +175,7 @@ ga('send', 'pageview');
             </li>
 
             <li> 
-              <a href='http://blog.lucywyman.me/tag/openshift.html'>openshift</a>
+              <a href='http://blog.lucywyman.me/tag/Openshift.html'>Openshift</a>
             </li>
 
             <li> 
