--- a/apps-to-love.html
+++ b/apps-to-love.html
@@ -19,7 +19,7 @@
 <meta name="keywords" content="book-review">
 <meta name="keywords" content="application">
 <meta name="keywords" content="health">
-<meta name="keywords" content="openshift">
+<meta name="keywords" content="Openshift">
 <meta name="keywords" content="orchestrator">
 <meta name="keywords" content="flag">
 <meta name="keywords" content="experiences">
@@ -212,7 +212,7 @@ it's an addictive, gamified way of learning new languages.</li>
             </li>
 
             <li> 
-              <a href='http://blog.lucywyman.me/tag/openshift.html'>openshift</a>
+              <a href='http://blog.lucywyman.me/tag/Openshift.html'>Openshift</a>
             </li>
 
             <li> 
