--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 <meta name="keywords" content="book-review">
 <meta name="keywords" content="application">
 <meta name="keywords" content="health">
-<meta name="keywords" content="openshift">
+<meta name="keywords" content="Openshift">
 <meta name="keywords" content="orchestrator">
 <meta name="keywords" content="flag">
 <meta name="keywords" content="experiences">
@@ -85,6 +85,16 @@ ga('send', 'pageview');
     </nav>
     <div class='wrapper'>
       <main>
+<div class='article-blurb'>
+	<div class='blurb-content'>
+    <h4><a href="http://blog.lucywyman.me/guide-to-dandruff.html">A Curly Girl's Guide to Dandruff</a></h4>
+	<p>03.29.2017</p>
+	<p><p>It's embarrassing, it's itchy, it's <em>everywhere</em>. I've had dandruff
+since I was a teenager, and as my personal care routine has evolved to
+suit my body's needs my dandruff has stubbornly persisted.  When I was
+shampooing every day? Dandruff. When I went months without shampooing ...</p><a href='guide-to-dandruff.html'>read more</a></p>
+	</div>
+</div>
 <div class='article-blurb'>
 	<img src='/theme/images/kitchens-of-the-great-midwest.jpg'>
 	<div class='blurb-content'>
@@ -153,16 +163,6 @@ details the life of Chip and ...</p><a href='the-magnolia-story.html'>read more<
 festivities and gatherings have ended, everyone is back to work and
 school, and there are weeks of dark, cold days¹ ahead of us. So, to get
 my mind off my SO's departure I listened to Jessi ...</p><a href='youll-grow-out-of-it.html'>read more</a></p>
-	</div>
-</div>
-<div class='article-blurb'>
-	<div class='blurb-content'>
-    <h4><a href="http://blog.lucywyman.me/reflections-on-2016.html">Reflections on 2016</a></h4>
-	<p>12.30.2016</p>
-	<p><p>January 1st of 2016 feels like it was a lifetime ago, doesn't it? 365
-days ago I was buying my last physics textbook, working on my senior
-project, and applying to jobs in my spare time. I had never voted in a
-Presidential election[1]. I had never ordered ...</p><a href='reflections-on-2016.html'>read more</a></p>
 	</div>
 </div>
 <p class="paginator">
@@ -257,7 +257,7 @@ Presidential election[1]. I had never ordered ...</p><a href='reflections-on-201
             </li>
 
             <li> 
-              <a href='http://blog.lucywyman.me/tag/openshift.html'>openshift</a>
+              <a href='http://blog.lucywyman.me/tag/Openshift.html'>Openshift</a>
             </li>
 
             <li> 
