--- a/setting-a-language-with-selenium-webdriver-in-ruby.html
+++ b/setting-a-language-with-selenium-webdriver-in-ruby.html
@@ -19,7 +19,7 @@
 <meta name="keywords" content="book-review">
 <meta name="keywords" content="application">
 <meta name="keywords" content="health">
-<meta name="keywords" content="openshift">
+<meta name="keywords" content="Openshift">
 <meta name="keywords" content="orchestrator">
 <meta name="keywords" content="flag">
 <meta name="keywords" content="experiences">
@@ -240,7 +240,7 @@ way to do it using the ruby gem. So here's what worked for me, where
             </li>
 
             <li> 
-              <a href='http://blog.lucywyman.me/tag/openshift.html'>openshift</a>
+              <a href='http://blog.lucywyman.me/tag/Openshift.html'>Openshift</a>
             </li>
 
             <li> 
