--- a/index6.html
+++ b/index6.html
@@ -87,6 +87,17 @@ ga('send', 'pageview');
       <main>
 <div class='article-blurb'>
 	<div class='blurb-content'>
+    <h4><a href="http://blog.lucywyman.me/boy.html">If I Were A Boy</a></h4>
+	<p>09.25.2016</p>
+	<p><p>Before attending university I was completely unaware of the diversity
+problem in STEM. In high school all of my classes were relatively
+50-50 in terms of gender, including science and math classes, and I
+had never experienced or noticed anyone treating me differently than
+my male peers.  My fist computer ...</p><a href='boy.html'>read more</a></p>
+	</div>
+</div>
+<div class='article-blurb'>
+	<div class='blurb-content'>
     <h4><a href="http://blog.lucywyman.me/openstack-image-default-username-reference.html">Openstack Image Default Username Reference</a></h4>
 	<p>09.6.2016</p>
 	<p><p>This seems like something that should exist on the internet and kind of
@@ -151,16 +162,6 @@ who at 36, on the verge of completing his residency to become
 a neurosurgeon, is diagnosed with stage IV lung cancer. Written
 in his last year of life, the book is about coming to terms with
 death and living a ...</p><a href='when-breath-becomes-air.html'>read more</a></p>
-	</div>
-</div>
-<div class='article-blurb'>
-	<div class='blurb-content'>
-    <h4><a href="http://blog.lucywyman.me/2016-summer-books.html">11(+) Books to Read This Summer</a></h4>
-	<p>05.17.2016</p>
-	<p><p>Hello beautiful reader! Summer is upon us, and with long sunny days ahead
-you know you'll be tripping to Powell's to pick up some summer reads.
-I wanted to make this a regular reading list with a variety of ficiton
-and nonfiction books, and I realized that 90 ...</p><a href='2016-summer-books.html'>read more</a></p>
 	</div>
 </div>
 <p class="paginator">
