--- a/archives.html
+++ b/archives.html
@@ -88,6 +88,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>09.15.2017</dt>
+    <dd><a href="http://blog.lucywyman.me/fall-bucket-list-2017.html">Fall Bucket List 2017</a></dd>
     <dt>07.25.2017</dt>
     <dd><a href="http://blog.lucywyman.me/installing-a-package-in-an-openshift-container.html">Installing a Package in an Openshift Container (Kind Of)</a></dd>
     <dt>06.15.2017</dt>
