Add winter reads post

--- a/archives.html
+++ b/archives.html
@@ -89,6 +89,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>11.14.2017</dt>
+    <dd><a href="http://blog.lucywyman.me/winter-reads-2017.html">Winter Reads 2017</a></dd>
     <dt>10.3.2017</dt>
     <dd><a href="http://blog.lucywyman.me/managing-coreos-with-puppet.html">Managing CoreOS With Puppet</a></dd>
     <dt>09.15.2017</dt>
