--- a/archives.html
+++ b/archives.html
@@ -95,6 +95,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>12.21.2017</dt>
+    <dd><a href="http://blog.lucywyman.me/my-reading-process.html">My Reading Process</a></dd>
     <dt>12.1.2017</dt>
     <dd><a href="http://blog.lucywyman.me/holiday-bucket-list-2017.html">Holiday Bucket List 2017</a></dd>
     <dt>12.1.2017</dt>
